# libghidra

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  install-prompt.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md  embed_specs.py
cpp/bindings/: CMakeLists.txt  python_bindings.cpp  rust_bridge.cpp
cpp/bindings/include/libghidra/: rust_bridge.hpp
cpp/cmake/: EmbedSpecs.cmake  GhidraSources.cmake  libghidraConfig.cmake.in
cpp/examples/: CMakeLists.txt  annotated_decompile.cpp  cfg_analysis.cpp  comments.cpp  data_items.cpp  decompile_function.cpp  decompile_pe.cpp  decompile_project.cpp  decompile_tokens.cpp  disassemble.cpp  end_to_end.cpp  enum_builder.cpp  function_signatures.cpp  function_tags.cpp  headless_cookbook.cpp  libghidra_cli.cpp  list_xrefs.cpp  memory_ops.cpp  parallel_decompile.cpp  parallel_headless.cpp  parse_declarations.cpp  pe_info.h  quickstart.cpp  session_lifecycle.cpp  struct_builder.cpp  structural_analysis.cpp  symbols.cpp  type_system.cpp
cpp/include/libghidra/: api.hpp  decompiler.hpp  functions.hpp  ghidra.hpp  headless.hpp  health.hpp  http.hpp  listing.hpp  local.hpp  memory.hpp  models.hpp  session.hpp  status.hpp  symbols.hpp  types.hpp  xrefs.hpp
cpp/patches/: 0001-bfd-arch-empty-target-for-sleigh-ids.patch  0002-loadimage-bfd-null-target-auto-detect.patch
cpp/src/: decompiler_pool.cpp  decompiler_pool.hpp  headless.cpp  http_client.cpp  local_arch_adapter.cpp  local_arch_adapter.hpp  local_client.cpp
cpp/src/engine/: force_capabilities.cpp  ghidra_cpp.h  ghidra_cpp_init.cpp  ghidra_cpp_init.h  ghidra_decompiler.cpp  ghidra_decompiler.h
cpp/src/engine/ghidradb/: address_map.cpp  address_map.h  btree.cpp  btree.h  buffer_file.cpp  buffer_file.h  db_record.cpp  db_record.h  ghidra_project.cpp  ghidra_project.h
ghidra-extension/: .gitignore  README.md  build.gradle  certification.manifest  extension.properties  settings.gradle
ghidra-extension/ghidra_scripts/: LibGhidraHeadlessServer.java
ghidra-extension/src/main/java/libghidra/host/: HeadlessScriptArgs.java  LibGhidraHeadlessHost.java  LibGhidraHostPlugin.java
ghidra-extension/src/main/java/libghidra/host/contract/: DecompilerContract.java  FunctionsContract.java  HealthContract.java  ListingContract.java  MemoryContract.java  SessionContract.java  SymbolsContract.java  TypesContract.java  XrefsContract.java
ghidra-extension/src/main/java/libghidra/host/http/: LibGhidraHttpServer.java
ghidra-extension/src/main/java/libghidra/host/rpc/: RpcDispatcher.java
ghidra-extension/src/main/java/libghidra/host/runtime/: BreakpointBookmarkStore.java  DataTypeSupport.java  DecompilerOperations.java  DecompilerRuntime.java  DecompilerSupport.java  FunctionPrototypeSupport.java  FunctionSupport.java  FunctionVariableMutationSupport.java  FunctionsOperations.java  FunctionsRuntime.java  HealthOperations.java  HealthRuntime.java  HostState.java  ListingOperations.java  ListingRuntime.java  LockScope.java  ManagedProgramSupport.java  MemoryOperations.java  MemoryRuntime.java  RuntimeBundle.java  RuntimeMappers.java  RuntimeSupport.java  SessionOperations.java  SessionRpcException.java  SessionRuntime.java  SymbolsOperations.java  SymbolsRuntime.java  TypesOperations.java  TypesRuntime.java  XrefsOperations.java  XrefsRuntime.java  package-info.java
ghidra-extension/src/main/java/libghidra/host/service/: DecompilerServiceHandler.java  FunctionsServiceHandler.java  HealthServiceHandler.java  ListingServiceHandler.java  MemoryServiceHandler.java  SessionServiceHandler.java  SymbolsServiceHandler.java  TypesServiceHandler.java  XrefsServiceHandler.java
proto/: README.md  buf.gen.yaml
proto/libghidra/: common.proto  decompiler.proto  functions.proto  health.proto  listing.proto  memory.proto  rpc.proto  session.proto  symbols.proto  types.proto  xrefs.proto
proto/tools/: gen-stubs.ps1  regen.py
python/: README.md  pyproject.toml
python/docs/: api_reference.md
python/examples/: annotate_and_export.py  async_explore.py  cfg_analysis.py  comments.py  data_items.py  decompile_tokens.py  disassemble.py  end_to_end.py  enum_builder.py  explore_binary.py  function_signatures.py  function_tags.py  local_quickstart.py  memory_ops.py  pagination.py  parse_declarations.py  pyhiew_decompile.py  quickstart.py  session_lifecycle.py  struct_builder.py  structural_analysis.py  symbols.py  type_system.py
python/src/libghidra/: __init__.py  _version.py  async_client.py  client.py  common_pb2.py  decompiler_pb2.py  errors.py  format_detect.py  functions_pb2.py  headless.py  health_pb2.py  known_languages.py  listing_pb2.py  local.py  memory_pb2.py  models.py  rpc_pb2.py  session_pb2.py  symbols_pb2.py  types_pb2.py  xrefs_pb2.py
python/src/libghidra/tools/: __init__.py  __main__.py  _deps.py  _output.py  cli.py  cmd_decompile.py  cmd_disasm.py  cmd_functions.py  cmd_info.py  cmd_status.py  cmd_strings.py
rust/: Cargo.toml  README.md  build.rs
rust/docs/: api_reference.md
rust/examples/: annotate_and_export.rs  cfg_analysis.rs  comments.rs  data_items.rs  decompile_tokens.rs  disassemble.rs  end_to_end.rs  enum_builder.rs  explore_binary.rs  format_detect.rs  function_signatures.rs  function_tags.rs  local_quickstart.rs  memory_ops.rs  pagination.rs  parse_declarations.rs  quickstart.rs  session_lifecycle.rs  struct_builder.rs  structural_analysis.rs  symbols.rs  type_system.rs
rust/src/: client.rs  convert.rs  error.rs  format_detect.rs  headless.rs  lib.rs  local.rs  local_ffi.rs  models.rs  paginate.rs  proto.rs  retry.rs
scripts/: build-python-native.py  build-wheels.py  bump-version.py
tests/python/format_detect/: test_detect.py  test_open_program.py
