# Examples demonstrating the libghidra C++ SDK.

# -- HTTP backend example --
add_executable(api_quickstart quickstart.cpp)
target_link_libraries(api_quickstart PRIVATE libghidra::client)
if(MSVC)
    target_compile_options(api_quickstart PRIVATE /EHsc /W3 /O2)
else()
    target_compile_options(api_quickstart PRIVATE -O2 -Wall)
endif()

add_executable(api_end_to_end end_to_end.cpp)
target_link_libraries(api_end_to_end PRIVATE libghidra::client)
if(MSVC)
    target_compile_options(api_end_to_end PRIVATE /EHsc /W3 /O2)
else()
    target_compile_options(api_end_to_end PRIVATE -O2 -Wall)
endif()

add_executable(api_headless_cookbook headless_cookbook.cpp)
target_link_libraries(api_headless_cookbook PRIVATE libghidra::client)
if(MSVC)
    target_compile_options(api_headless_cookbook PRIVATE /EHsc /W3 /O2)
else()
    target_compile_options(api_headless_cookbook PRIVATE -O2 -Wall)
endif()

add_executable(api_parallel_headless parallel_headless.cpp)
target_link_libraries(api_parallel_headless PRIVATE libghidra::client)
if(MSVC)
    target_compile_options(api_parallel_headless PRIVATE /EHsc /W3 /O2)
else()
    target_compile_options(api_parallel_headless PRIVATE -O2 -Wall)
endif()

add_executable(api_function_tags function_tags.cpp)
target_link_libraries(api_function_tags PRIVATE libghidra::client)
if(MSVC)
    target_compile_options(api_function_tags PRIVATE /EHsc /W3 /O2)
else()
    target_compile_options(api_function_tags PRIVATE -O2 -Wall)
endif()

add_executable(api_parse_declarations parse_declarations.cpp)
target_link_libraries(api_parse_declarations PRIVATE libghidra::client)
if(MSVC)
    target_compile_options(api_parse_declarations PRIVATE /EHsc /W3 /O2)
else()
    target_compile_options(api_parse_declarations PRIVATE -O2 -Wall)
endif()

# -- Local backend examples (require libghidra_local) --
if(TARGET libghidra_local)
    function(add_local_example EXAMPLE_NAME)
        set(TARGET_NAME "api_${EXAMPLE_NAME}")
        add_executable(${TARGET_NAME} ${EXAMPLE_NAME}.cpp)
        target_link_libraries(${TARGET_NAME} PRIVATE libghidra::local_whole)
        target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
        if(MSVC)
            target_compile_options(${TARGET_NAME} PRIVATE /EHsc /W3 /O2)
        else()
            target_compile_options(${TARGET_NAME} PRIVATE -O2 -Wall)
        endif()
    endfunction()

    add_local_example(decompile_function)
    add_local_example(annotated_decompile)
    add_local_example(decompile_pe)
    add_local_example(decompile_project)
    add_local_example(libghidra_cli)
    add_local_example(list_xrefs)
    add_local_example(parallel_decompile)
    add_local_example(memory_ops)
    add_local_example(disassemble)
    add_local_example(comments)
    add_local_example(data_items)
    add_local_example(symbols)
    add_local_example(type_system)
    add_local_example(struct_builder)
    add_local_example(enum_builder)
    add_local_example(function_signatures)
    add_local_example(cfg_analysis)
    add_local_example(structural_analysis)
    add_local_example(decompile_tokens)
    add_local_example(session_lifecycle)
endif()
